base html change

--- a/nocode_app/templates/base.html
+++ b/nocode_app/templates/base.html
@@ -88,6 +88,9 @@
 	{%- endblock -%}
 
 	<div id="all-symbols" style="display:none"></div>
+	<div>
+		test
+	</div>
 	{%- for path in web_include_icons -%}
 	{{ include_icons(path) }}
 	{%- endfor -%}
