remove footer template

--- a/nocode_app/templates/base.html
+++ b/nocode_app/templates/base.html
@@ -79,7 +79,7 @@
 
 	{%- block footer -%}
 		{{ web_block(
-			'custom footer' or footer_template or 'Standard Footer',
+			'Standard Footer',
 			values=_context_dict,
 			add_container=0,
 			add_top_padding=0,
